[feature] Move to location
